# IAFINAL-AZURE

./: README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: api.py  model_loader.py  ollama_client.py
backend/config/: config.toml
backend/data/: data_1.json  data_2.json  docs.pkl
backend/embeddings/: embedding_store.py  embedding_store_I.py  embedding_store_II.py  embedding_store_III.py
frontend/: Dockerfile  main.py  pyproject.toml
